# projectM-service

./: README.md  cdk.json  package.json  pnpm-lock.yaml
function/: Cargo.toml  Dockerfile  entrypoint.sh
function/src/: lambda.rs  main.rs  utils.rs  visualize_audio.rs
function/visualizer/: .gitignore  Dockerfile
function/visualizer/src/: lambda.rs  lib.rs  visualize_audio.rs
lib/: project_m-cdk-stack.ts  stack.ts
test/: project_m-cdk.test.ts
