[package]
name = "projectm_lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
gstreamer = "0.22.6"
gstreamer-audio = "0.22.6"
gstreamer-video = "0.22.6"
gstreamer-app = "0.22.6"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
lambda_runtime = "0.12.0"
serde = { version = "1.0.203", features = ["derive"] }
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json"] }
tempfile = "3"
chrono = "0.4.38"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws_lambda_events = { version = "0.15.1" }
uuid = { version = "1.9.1", features = ["v4"] }
serde_json = "1.0.120"
